# harps_player

./: Doxyfile  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  harps_player.kdevelop  harps_player.kdevelop.pcs  harps_player.kdevses
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  harps_player.cpp  score.hpp
